Goals UIs and relevant java files(Data team please edit as you see fit) are added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">app0</string>
+    <string name="close_button_description">Close</string>
+    <string name="select_frequency">Select Frequency</string>
+    <string name="select_difficulty">Select Difficulty</string>
+    <string name="cancel">Cancel</string>
 </resources>
