update: cleaned files removed empty files and added logo to the app on emulator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
         <item>Monthly</item>
     </string-array>
 
-    <!-- Add to your strings.xml file -->
+    <!-- Add to strings.xml file -->
     <string-array name="until_options">
         <item>Forever</item>
         <item>1 week</item>
